# PeperoniGratis

./: .gitignore  platformio.ini
include/: air.h  battery.h  credetials.h  httposter.h  logger.h  optional.h  payload.h  pump.h  serverConnection.h  soil.h  util.h
lib/InfluxDB-Client-for-Arduino-master/src/: InfluxDbClient.h
lib/InfluxDB-Client-for-Arduino-master/src/util/: debug.h
serverCode/: Cargo.toml  HELLO.txt  backend.py  backendServer.py  frontendServer.py  generate.py  old.csv  server.py  server_display.py  server_logging.py  store.csv  store.py  test.py  write.csv
serverCode/client/: data.json  index.html
serverCode/client/static/: script.js  styles.css
serverCode/root/: data.json  script.js
serverCode/src/: internal_error.rs  lib.rs  main.rs  store.rs
serverCode/tests/: store.rs  test.csv
src/: air.cpp  battery.cpp  httposter.cpp  logger.cpp  main.cpp  optional.cpp  payload.cpp  pump.cpp  serverConnection.cpp  soil.cpp
