[package]
name = "PeperoniServer"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "PeperoniServer"
path = "src/main.rs"

[lib]
name = "PeperoniServer"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
csv = "1.2.1"
derive-getters = "0.2.0"
rand = "0.8.5"
serde = { version = "1.0.159", features = ["serde_derive"] }
